# SlangRenderServer

./: .gitmodules  meson.build  server.c
.cache/clangd/index/: binaryData.c.6267DB78142AB629.idx  binaryData.h.1E14A244266E0ACA.idx  buffer_core.c.C4BB723908A82742.idx  buffer_core.h.935748A56E535B01.idx  core_types.h.FC795147ACCA3708.idx  envelope.c.7401D0D62AF82B33.idx  envelope.h.3D8B536CCDA91F78.idx  envelope_types.h.2CFEB4D539F63DDC.idx  filter_types.h.AC65A45C1474D7C3.idx  function.c.DC4B05EEAD175D58.idx  function.h.C709CDEAF4AA084C.idx  interpreter.c.518F32D9A35EB9C4.idx  interpreter.h.DBE76E4EE5F90FCD.idx  linenvelope.c.1EC822BC58F69AC3.idx  linenvelope.h.1A0C7395CCD22522.idx  lowpassfilter.c.4A7D57E5B819CDF7.idx  lowpassfilter.h.5BDC737780AD7BA1.idx  modifier_types.h.920493EA4B77CA69.idx  modules.h.0265C228231D161D.idx  oscillator.c.1EBC3D8030A22020.idx  oscillator.h.12CE2D0D9C27481F.idx  oscillator_types.h.BF8127CAEC360CC5.idx  parser.c.066AFC4CFCBF4938.idx  parser.h.9FCCD062A73AC4BE.idx  rack.c.65A6B28225081833.idx  rack.h.0CBD720AA1EB37A1.idx  sample_source.c.DE513BF06419602B.idx  sample_source.h.D44762941D996EDD.idx  sawtooth.c.A67B9E4B4879EE5C.idx  sawtooth.h.9C3772B4BFEE3965.idx  server.c.17297185993D7285.idx  sine.c.595533E19AD3AF4E.idx  sine.h.53F5406170BB8EB2.idx  slang-lib.h.D966C90643E6A52C.idx  slang.c.700A699FD0D4A2C7.idx  square.c.0A0EB626CC926D2E.idx  square.h.C92A9F72425DD2BE.idx  stepsequencer.c.DBED512AD43C0E64.idx  stepsequencer.h.58AE923D6A3CB18B.idx  stepsequencer_types.h.70AD8D2F091FFCAF.idx  (+12 more)
subprojects/Slang/: .gitignore  Dockerfile  README.md  build-host.sh  meson.build  meson_options.txt  slang-lib.h  slang.c  test.sh  tester.c
subprojects/Slang/.github/workflows/: test1.yml
subprojects/Slang/core/include/: buffer_core.h  core_types.h  function.h  interpreter.h  parser.h  rack.h  tokenizer.h  tools.h  variable.h
subprojects/Slang/core/src/: buffer_core.c  function.c  interpreter.c  parser.c  rack.c  tokenizer.c  tools.c
subprojects/Slang/examples/: README.md  basics.slang  customwavetable.slang  filters.slang  functions.slang  logic.slang  random.slang  song1.slang  synths.slang  tester.slang
subprojects/Slang/modules/: modules.h
subprojects/Slang/modules/data/include/: binaryData.h
subprojects/Slang/modules/data/src/: binaryData.c
subprojects/Slang/modules/envelope/include/: envelope.h  envelope_types.h  linenvelope.h
subprojects/Slang/modules/envelope/src/: envelope.c  linenvelope.c
subprojects/Slang/modules/filters/include/: filter_types.h  lowpassfilter.h
subprojects/Slang/modules/filters/src/: lowpassfilter.c
subprojects/Slang/modules/modifier/include/: modifier_types.h
subprojects/Slang/modules/oscillators/include/: oscillator.h  oscillator_types.h  sawtooth.h  sine.h  square.h  terrain.h  triangle.h  wavetable.h
subprojects/Slang/modules/oscillators/src/: oscillator.c  sawtooth.c  sine.c  square.c  terrain.c  triangle.c  wavetable.c
subprojects/Slang/modules/sample-source/include/: sample_source.h
subprojects/Slang/modules/sample-source/src/: sample_source.c
subprojects/Slang/modules/stepsequencer/include/: stepsequencer.h  stepsequencer_types.h
subprojects/Slang/modules/stepsequencer/src/: stepsequencer.c
subprojects/Slang/waves/: allegro.swave  closed.swave  direct.swave  eager.swave  strangeone.swave  tall.swave
